@@ -1613,9 +1613,6 @@ void init_calc_table(pot_table_t *optt, pot_table_t *calct)
 #else
   int  *sp;
 #endif
-  /* #ifdef MONOPOLE
-  real f_c, f_cd, f_d;
-  #endif */
 
   switch (format) {
 #ifdef APOT
@@ -1643,31 +1640,12 @@ void init_calc_table(pot_table_t *optt, pot_table_t *calct)
 	  reg_for_free(calct->table, "calct->table");
 	  calct->d2tab = (real *)malloc(calct->len * sizeof(real));
 	  reg_for_free(calct->d2tab, "calct->d2tab");
-	  /* #ifdef MONOPOLE
-	     calct->table_c = (real *)malloc(calct->len * sizeof(real));
-	     reg_for_free(calct->table_c, "calct->table_c");
-	     calct->d2tab_c = (real *)malloc(calct->len * sizeof(real));
-	     reg_for_free(calct->d2tab_c, "calct->d2tab_c");
-	     calct->table_cd = (real *)malloc(calct->len * sizeof(real));
-	     reg_for_free(calct->table_cd, "calct->table_cd");
-	     calct->d2tab_cd = (real *)malloc(calct->len * sizeof(real));
-	     reg_for_free(calct->d2tab_cd, "calct->d2tab_cd");
-	     calct->table_d = (real *)malloc(calct->len * sizeof(real));
-	     reg_for_free(calct->table_d, "calct->table_d");
-	     calct->d2tab_d = (real *)malloc(calct->len * sizeof(real));
-	     reg_for_free(calct->d2tab_d, "calct->d2tab_d");
-	     #endif */
 	  calct->idx = (int *)malloc(calct->len * sizeof(int));
 	  reg_for_free(calct->idx, "calct->idx");
 	  if (calct->first == NULL || calct->last == NULL
 	    || calct->step == NULL || calct->invstep == NULL
 	    || calct->xcoord == NULL || calct->table == NULL
 	    || calct->d2tab == NULL || calct->idx == NULL
-	    /* #ifdef MONOPOLE
-	       || calct->d2tab_c == NULL || calct->table_c == NULL
-	       || calct->d2tab_cd == NULL || calct->table_cd == NULL
-	       || calct->d2tab_d == NULL || calct->table_d == NULL
-	       #endif */
 	    )
 	    error("Cannot allocate info block for calc potential table\n");
 
@@ -1677,14 +1655,6 @@ void init_calc_table(pot_table_t *optt, pot_table_t *calct)
 	    h = apot_table.values[i][apot_table.n_par[i] - 1];
 	    calct->table[i * APOT_STEPS + i * 2] = 10e30;
 	    calct->table[i * APOT_STEPS + i * 2 + 1] = 0;
-	    /* #ifdef MONOPOLE
-	       calct->table_c[i * APOT_STEPS + i * 2] = 10e30;
-	       calct->table_c[i * APOT_STEPS + i * 2 + 1] = 0;
-	       calct->table_cd[i * APOT_STEPS + i * 2] = 10e30;
-	       calct->table_cd[i * APOT_STEPS + i * 2 + 1] = 0;
-	       calct->table_d[i * APOT_STEPS + i * 2] = 10e30;
-	       calct->table_d[i * APOT_STEPS + i * 2 + 1] = 0;
-	       #endif */
 	    calct->first[i] = (x += 2);
 	    calct->last[i] = (x += APOT_STEPS - 1);
 	    x++;
@@ -1699,24 +1669,20 @@ void init_calc_table(pot_table_t *optt, pot_table_t *calct)
 	      calct->table[index] =
 		smooth_pot[i] ? f * cutoff(calct->xcoord[index],
 		calct->begin[i], h) : f;
-	      /* #ifdef MONOPOLE
-	         coulomb_shift(calct->xcoord[index], &f_c);
-	         calct->table_c[index] =
-	         smooth_pot[i] ? f_c * cutoff(calct->xcoord[index],
-	         calct->begin[i], h) : f_c;
-	         coulomb_dipole_shift(calct->xcoord[index], &f_cd);
-	         calct->table_cd[index] =
-	         smooth_pot[i] ? f_cd * cutoff(calct->xcoord[index],
-	         calct->begin[i], h) : f_cd;
-	         dipole_shift(calct->xcoord[index], &f_d);
-	         calct->table_d[index] =
-	         smooth_pot[i] ? f_d * cutoff(calct->xcoord[index],
-	         calct->begin[i], h) : f_d;
-	         #endif */
 	      calct->idx[i * APOT_STEPS + j] = index;
 	    }
 	  }
 
+#ifdef MONOPOLE
+	  /* calculate and store tail functions */
+	  for (i = 0; i < natoms; i++) {
+	    for (j = 0; j < atoms[i].n_neigh; j++) {
+	      elstat_shift(atoms[i].neigh[j].r, &atoms[i].neigh[j].fnval_el,
+			   &atoms[i].neigh[j].grad_el, &atoms[i].neigh[j].ggrad_el);
+	    }	
+	  }
+#endif
+	  
 	}
 	break;
 #else
@@ -1735,7 +1701,7 @@ void init_calc_table(pot_table_t *optt, pot_table_t *calct)
 	calct->table = optt->table;
 	calct->d2tab = optt->d2tab;
 	calct->idx = optt->idx;
-#endif
+#endif /* APOT */
   }
 }
 
